--- a/assets/html/main-movie.html
+++ b/assets/html/main-movie.html
@@ -21,7 +21,7 @@
     </nav>
     <form method="GET" action="">
         <fieldset class="MainSearch">
-            <legend>비교할 검색어를 입력해주세요: 뉴스</legend>
+            <legend>비교할 검색어를 입력해주세요: 영화</legend>
             <div class="SearchContiner">
                 <fieldset class="SearchBox">
                     <legend>1.</legend>
