--- a/assets/html/main-news.html
+++ b/assets/html/main-news.html
@@ -25,7 +25,7 @@
             <div class="SearchContiner">
                 <fieldset class="SearchBox">
                     <legend>1.</legend>
-                    <input type="text" placeholder="검색" name="first_value" id="first_value">
+                    <input type="text" placeholder="검색" name="first_value" id="first_value" autofocus>
                 </fieldset>
                 <div class="vs">
                     VS
