add pages and edit design

--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/result.css">
+    <link rel="stylesheet" href="../css/home.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@900&display=swap" rel="stylesheet">
     <title>talkingpotato</title>
 </head>
 <body>
     <header>
-        <a href="./home.html">Talking Potato</a>
+        <a href="/">Talking Potato</a>
     </header>
     <nav>
         <ul>
@@ -19,21 +19,5 @@
             <li><a href="./main-news.html">뉴스</a></li>
         </ul>
     </nav>
-    <main>
-        <fieldset class="MainSearch">
-            <legend>결과</legend>
-            <div class="SearchContiner">
-                <fieldset class="SearchBox">
-                    <legend>1.</legend>
-                </fieldset>
-                <div class="vs">
-                    VS
-                </div>
-                <fieldset class="SearchBox">
-                    <legend>2.</legend>
-                </fieldset>
-            </div>
-        </fieldset>
-    </main>
 </body>
 </html>
