--- a/assets/html/main-fashion.html
+++ b/assets/html/main-fashion.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="/">Talking Potato</a>
+        <a href="./home.html">Talking Potato</a>
     </header>
     <nav>
         <ul>
@@ -19,7 +19,7 @@
             <li><a href="./main-news.html">뉴스</a></li>
         </ul>
     </nav>
-    <form method="GET" action="./ActionCompare.html">
+    <form method="GET" action="result.html">
         <fieldset class="MainSearch">
             <legend>비교할 검색어를 입력해주세요: 패션</legend>
             <div class="SearchContiner">
