--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        location.href = 'assets/html/main-fashion.html';
+        location.href = 'assets/html/home.html';
     </script>
 </body>
 </html>
